--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <h2>New commit</h2>
     <script src="scripts/script.js"></script>
 </body>
 </html>
